# c

./: .clang-format
.github/workflows/: build-and-lint.yml
1/: CMakeLists.txt
2/: 1.c  2.c  3.c  4.c  CMakeLists.txt
3/: CMakeLists.txt  balance.c  count_array.c  substring.c
4/: CMakeLists.txt  build.md  main.c  optimal_sort.c  optimal_sort.h  optimal_sort.s
5/: CMakeLists.txt  advanced_balance.c  shuntingYard.c  stack.c  stack.h
5/advancedBalance/: CMakeLists.txt  stack.c
5/shunting_yard/: CMakeLists.txt
6/: CMakeLists.txt  loop_sorted_list.c  main_sorted_list.c  sorted_list.c  sorted_list.h
6/test/: test_sorted_list.c  test_sorted_list.h
7/: CMakeLists.txt  bit.c  bit.h
kr1/: 1.c  2.c  monkey.c
kr2/: list.c  list.h  palindrom.c  shift.c
